# OOP-labs

./: README.md
.devcontainer/: devcontainer.json
include/: func.h
laba1/: CMakeLists.txt
laba1/.devcontainer/: Dockerfile
laba1/src/: func.cpp
laba1/tests/: test_laba1.cpp
src/: main.cpp
